# reto-tusdatos

./: .gitignore  README.md  docker-compose.yml
backend/: README.md  dockerfile  env_example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ab0dd81e7622_create_tables_of_mis_eventos.py  cb32988344c6_se_adiciona_fecha_de_inicio_a_la_sesion.py
backend/app/: main.py
backend/app/api/v1/: api_v1.py
backend/app/api/v1/endpoints/: assistant.py  auth.py  event.py  session.py  user.py
backend/app/core/: assistant.py  config.py  event.py  managment.py  session.py  user.py
backend/app/core/authenticator/: auth.py  jwt_utils.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  assistant.py  event.py  event_assistant.py  session.py  user.py
backend/app/routers/: auth.py
backend/app/schemas/: assistant.py  event.py  session.py  user.py
backend/tests/: conftest.py  test_assistant.py  test_auth.py  test_event.py  test_event_assistant.py  test_session.py  test_user.py
backend/tests/factories/: event_factory.py  session_factory.py  user_factory.py
frontend/: README.md  angular.json  dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/auth-user/: auth.service.spec.ts  auth.service.ts
frontend/src/app/event-managment/: event.service.spec.ts  event.service.ts  event.ts
frontend/src/app/header/: header.component.css  header.component.html  (+2 more)
(+53 files in other folders)
